@@ -8,6 +8,7 @@
 * PayPal Express gateway: Add reference authorizations [fabiokr]
 * Add Cardstream Modern gateway [ExxKA]
 * Pin: Fix special headers [duff]
+* PayPal Express gateway: Remember the billing agreement id as Response#authorization [duff]
 
 == Version 1.32.1 (April 4, 2013)
 
